--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <!-- <script src="script-test.js"></script>  -->
+    <!-- <script src="cycle-test.js"></script> -->
 </body>
